// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`subscriptionRenewalEmail plantilla asunto de renovación; comprobante y tono de otro periodo 1`] = `"Anto: otro periodo contigo (plan Mensual)"`;

exports[`subscriptionRenewalEmail plantilla asunto de renovación; comprobante y tono de otro periodo 2`] = `
{
  "bloqueCobro": true,
  "ctaAbrirApp": true,
  "planMensual": true,
  "preheaderOculto": true,
  "referencia": true,
  "renovacion": true,
}
`;

exports[`subscriptionRenewalEmail plantilla language en asunto, comprobante y renovación en inglés 1`] = `"Anto: another period with you (Monthly plan)"`;

exports[`subscriptionRenewalEmail plantilla language en asunto, comprobante y renovación en inglés 2`] = `
{
  "bloqueCobro": true,
  "ctaOpenApp": true,
  "planMonthly": true,
  "referencia": true,
  "renovacion": true,
  "thanksForStaying": true,
}
`;
